// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMetroFromLocation Возвращает ничего 1`] = `undefined`;

exports[`getMetroFromLocation Возвращает объект для типа ___UNKNOWN_TYPE___ 1`] = `
Object {
  "metroId": 218432,
  "timeToMetro": 19,
  "transportToMetro": 0,
}
`;

exports[`getMetroFromLocation Возвращает объект для типа ON_CAR 1`] = `
Object {
  "metroId": 218432,
  "timeToMetro": 19,
  "transportToMetro": 3,
}
`;

exports[`getMetroFromLocation Возвращает объект для типа ON_FOOT 1`] = `
Object {
  "metroId": 218432,
  "timeToMetro": 19,
  "transportToMetro": 1,
}
`;

exports[`getMetroFromLocation Возвращает объект для типа ON_TRANSPORT 1`] = `
Object {
  "metroId": 218432,
  "timeToMetro": 19,
  "transportToMetro": 2,
}
`;
